--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,6 +23,38 @@
                 </td>
             </tr>
         </table>
+        <br><br>
+        <hr>
+        <br><br>
+        <table>
+        	<tr>
+        		<td colspan="3">
+        			<button type="button" onclick="connectXPlane();">Connect X-Plane Server...</button>
+        		</td>
+        	</tr>
+        	<tr><td>&nbsp;</td></tr>
+        	<tr>
+        		<td><font style="font-family:Arial;font-size:12px;">Message to send...:</font><br>
+        		<textarea rows="10" cols="80" id="xplaneMessage">{
+   "messageId":"0",
+   "lat":"1",
+   "lng":"2"
+}</textarea><br>
+        			<button type="button" onclick="sendXPlane();" >Send</button> &nbsp; --- &nbsp;
+                    <button type="button" onclick="info1();" >Info 1</button>&nbsp;
+                    <button type="button" onclick="send();" >Info 2</button>&nbsp;
+                    <button type="button" onclick="send();" >Info 3</button>&nbsp;
+                    <button type="button" onclick="send();" >Info 4</button>
+        		</td>
+        	</tr>
+        	<tr><td>&nbsp;</td></tr>
+        	<tr>
+                <td colspan="3">
+                	<font style="font-family:Arial;font-size:12px;">Received...:</font><br>
+                    <textarea readonly="true" rows="10" cols="80" id="logXPlane"></textarea>
+                </td>
+            </tr>
+        </table>
     </body>
 
     <script src="websocket.js"></script>
